# autoscaling_ollama_k8s

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
api/: api.py
services/: cache.py  redis_client.py
utils/: gpu.py  manage_models.py
worker/: celery_app.py
